fix overflow issue

--- a/src/main.css
+++ b/src/main.css
@@ -26,6 +26,7 @@ body {
   display: grid;
   grid-template-columns: 1fr auto;
   height: 100%;
+  min-height: 0;
 }
 
 .artifact-list {
